syntax = "proto3";

package subpub_service;
option go_package = "github.com/Vladimir220/subpub/subpub_service/subpub_service";
import "google/protobuf/empty.proto";

service PubSub {
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
    string key = 1;
}

message PublishRequest {
    string key = 1;
    string data = 2;
}

message Event {
    string data = 1;
}